[gd_scene load_steps=2 format=3 uid="uid://drv56t00ni1rl"]

[ext_resource type="Script" uid="uid://xitc7pd2w3o4" path="res://GameScreen/level_up_screen.gd" id="1_4h0uf"]

[node name="Level_Up_Screen" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -477.0
offset_top = -270.0
offset_right = 478.0
offset_bottom = 270.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4h0uf")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 211.0
offset_top = 78.0
offset_right = 784.0
offset_bottom = 482.0
color = Color(0.6816622, 0.55506504, 0.5260156, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 957.0
offset_bottom = 542.0
alignment = 1

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Level Up!"
horizontal_alignment = 1

[node name="Upgrade_1" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Choice 1"

[node name="Upgrade_2" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Choice 2"

[node name="Upgrade_3" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Choice 3"
